# MyOwnGigaLearn

./: ADVANCED_OPTIMIZATIONS_IMPLEMENTATION_REPORT.md  AdvancedRewards_Complete_Guide.md  CHECKPOINT_FOLDER_SOLUTION.md  CMakeLists.txt  CMakePresets.json  COMPILATION_FIXES_REPORT.md  FINAL_SCORING_OPTIMIZATION_RECOMMENDATIONS.md  GigaLearnCPP_Reward_System_Enhanced_Guide.md  GigaLearnCPP_Reward_System_Guide.md  GigaLearnCPP_Reward_System_ULTIMATE_COMPREHENSIVE_GUIDE.md  OPTIMIZATION_IMPLEMENTATION_REPORT.md  PROJECT_IMPROVEMENTS.md  PROJECT_STRUCTURE.md  SCORING_FOCUSED_OPTIMIZATION_REPORT.md  activate_infrastructure.py  add_adaptive_clipconfig.py  add_final_wave.py  add_gradient_accum_config.py  add_more_optimizations.py  add_optimizations_include.py  add_orthogonal_init.py  add_phase10_neuromorphic.py  add_phase11_quantumbio.py  add_phase6_hyperscale.py  add_phase7_quantum.py  add_phase9_meta.py  analyze_build_errors.py  analyze_gae.py  analyze_remaining_optimizations.py  apply_math_perfection.py  apply_real_optimizations.py  apply_research_optimizations.py  auto_fix_build.py  baseline_log.txt  baseline_run.err  build.ps1  build_log.txt  check_integration.py  check_logic_usage.py  cleanup_and_activate.py  (+108 more)
GigaLearnCPP/: CMakeLists.txt  COMPILATION_ERRORS_FIX_REPORT.md  PolicyVersionManager_COMPILATION_FIXES_FINAL_REPORT.md
GigaLearnCPP/src/private/GigaLearnCPP/: FrameworkTorch.h  PolicyVersionManager.cpp  PolicyVersionManager.h
GigaLearnCPP/src/public/GigaLearnCPP/: Learner.cpp  Learner.h  LearnerConfig.h
checkpoints_deploy/: .gitkeep
src/: ExampleMain.cpp  ExampleMainOptimized.cpp
(+22 files in other folders)
